# yahtzee

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish-wasm.yml
src/: main.rs  rolls.rs  state.rs
yahtzee-api/: Cargo.toml
yahtzee-api/src/: main.rs
yahtzee-core/: Cargo.toml
yahtzee-core/src/: lib.rs  persistence.rs  rolls.rs  state.rs  valid_states.rs
yahtzee-solver/: Cargo.toml
yahtzee-solver/src/: lib.rs  main.rs
yahtzee-wasm/: Cargo.toml
yahtzee-wasm/src/: lib.rs
