[package]
name = "yahtzee-api"
version = "0.1.0"
edition = "2024"

[dependencies]
yahtzee-core = { path = "../yahtzee-core" }
yahtzee-solver = { path = "../yahtzee-solver" }
axum = "0.8"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
