[package]
name = "yahtzee-wasm"
version = "0.1.0"
edition = "2024"
description = "Yahtzee optimal-play engine as a WebAssembly module"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yahtzee-core = { path = "../yahtzee-core" }
yahtzee-solver = { path = "../yahtzee-solver" }